--- a/locales/ro.json
+++ b/locales/ro.json
@@ -1,193 +1,207 @@
 {
-    "24_hrs": "24 ore",
-    "accept_notifications": "Primește notificări",
-    "ads": "Publicitate",
-    "back_color": "Culoare fundal",
-    "base_color": "Base color",
-    "border_color": "Culoare margini",
-    "configuration": "Configurare",
-    "contact": "Contact",
-    "count_news_format": [[0, 0,"%d știri"], [1,1,"o știre"], [2,null,"%d știri"]],
-    "count_places_format": [[0,0,"%d localități"], [1,1,"o localitate"], [2,null,"+%d localități"]],
-    "count_views_format": [[0,0,"%d vizualizări"], [1,1,"o vizualizare"], [2,null,"%d vizualizări"]],
-    "country_al": "Albania",
-    "country_bg": "Bulgaria",
-    "country_cz": "Cehia",
-    "country_hu": "Ungaria",
-    "country_in": "India",
-    "country_it": "Italia",
-    "country_lv": "Letonia",
-    "country_md": "Moldova",
-    "country_pl": "Polonia",
-    "country_ro": "România",
-    "country_ru": "Rusia",
-    "country_tr": "Turcia",
-    "country_kz": "Kazahstan",
-    "daily_horoscope_details_format": "Horoscopul pentru astăzi %(name)s.",
-    "daily_horoscope_details": "Horoscop zilnic. Horoscopul pentru astăzi și mâine.",
-    "daily_horoscope_format": "Horoscop: %(name)s",
-    "daily_horoscope": "Horoscopul zilei",
-    "weather_around_the_world": "Vremea în lume",
-    "daily": "Zilnic",
-    "date_format": "D MMMM",
-    "day_format": "dddd, D MMMM",
-    "days": "zile",
-    "detailed_horoscope": "Horoscop detaliat",
-    "error_404_info": "Pagina nu a fost găsită",
-    "error_500_info": "Eroare necunoscută",
-    "error_description": "A apărut o eroare. Căutăm vinovații...",
-    "error": "Eroare",
-    "events_from_country_format": "Evenimente din %(name)s",
-    "events": "Evenimente",
-    "exchange_rates": "Curs valutar",
-    "exchange": "Curs valutar",
-    "export_horoscope": "Preluare horoscop",
-    "forecast_no_data": "Vă rugăm să încercați peste câteva minute.",
-    "forecast_on_email_place_format": "Vremea în %(name)s pe email.",
-    "foto_video_from_event_format": "Foto și Video: %(name)s",
-    "generate": "Generează",
-    "head_back_color": "Titlu culoare fundal",
-    "head_text_color": "Titlu culoare text",
-    "health": "Sănătate",
-    "heigth": "Înălțime",
-    "home": "Acasă",
-    "horizontal": "Orizontal",
-    "horo_api_title": "Preluare horoscop",
-    "horo_notifications_subscribe_for_sign_format": "%(name)s: Primește notificări zilnice",
-    "horo_on_your_site_info": "Horoscopul zilnic gratuit pe site-ul tău",
-    "horo_on_your_site": "Horoscopul pe site-ul tău",
-    "horo_sign_daily_details_format": "%(sign)s. Horoscopul zilei: %(date)s",
-    "horo_sign_daily_title_format": "%(sign)s: Horoscopul zilei",
-    "horo_sign_date_format": "D MMM",
-    "horo_sign_weekly_details_format": "%(sign)s. Horoscopul săptămânii: %(date)s",
-    "horo_sign_weekly_title_format": "%(sign)s: Horoscop săptămânal",
-    "horoscope_md_app_name": "Click Horoscop",
-    "horoscope_md_short_app_name": "Horoscop",
-    "horoscope_ro_app_name": "Ournet Horoscop",
-    "horoscope_ro_short_app_name": "Horoscop",
-    "horoscope": "Horoscop",
-    "hour": "Ora",
-    "html_code": "Codul HTML",
-    "humidity": "Umiditate",
-    "icon_color": "Culoare imagine",
-    "images": "imagini",
-    "important_news_in_last_7days": "Știri importante în ultimele 7 zile",
-    "important_news": "Știri importante",
-    "important": "Important",
-    "in_country_md": "R. Moldova",
-    "in_country_ro": "România",
-    "info": "Info",
-    "international": "Internațional",
-    "invalid_email": "Invalid Email!",
-    "item_color": "Item color",
-    "item_conditions": "Condiţia atmosferică",
-    "item_pressure": "mmHg",
-    "item_temperatire": "Temperatura aerului, °C",
-    "item_wind_dir": "Directia vîntului",
-    "item_wind_speed_ms": "m/s",
-    "item_wind_speed": "Viteza vînt. m/s",
-    "latest_events_from_country_format": "Ultimele evenimente din %(name)s",
-    "latest_events": "Ultimele evenimente",
-    "latest_news": "Ultimele știri",
-    "latest_quotes_in_media_country_format": "Ultimele declarații/citate din presă - %(country)s",
-    "latest_quotes_in_media": "Ultimele declarații din presă",
-    "latest_quotes": "Ultimele declarații",
-    "line_color": "Culoare linii",
-    "load_more_places": "Mai multe localităţi",
-    "love": "Dragoste",
-    "lucky_numbers": "Numere norocoase",
-    "max": "max",
-    "min": "min",
-    "mm": "mm",
-    "more_events": "Mai multe evenimente",
-    "more_quotes": "Mai multe declarații",
-    "more": "Mai mult",
-    "most_important_news_in_last_7days_country_format": "Cele mai importante știri din presa din %(country)s pentru ultimele 7 zile",
-    "news_md_app_name": "Click Știri",
-    "news_md_short_app_name": "Știri",
-    "news_ro_app_name": "Ournet Știri",
-    "news_ro_short_app_name": "Știri",
-    "news_site_description_format": "Toate știrile din %(country)s. Evenimente, declarații, tendințe.",
-    "news_site_title_format": "Ultimele știri din %(country)s",
-    "news_sources": "Surse de știri",
-    "news_sources_in_country_format": "Surse de știri din %(country)s",
-    "add_news_source": "Adaugă o sursă",
-    "news_topic_description_format": "Ultimele știri și evenimente din presa despre %(name)s",
-    "news_topic_page_title_format": "%(name)s - Ultimele știri",
-    "news": "Știri",
-    "no_days": "Nr. zile",
-    "no_thanks": "Nu mulțumesc",
-    "not_found_places": "Nu am găsit nici o localitate.",
-    "opinia": "Opinia",
-    "photo": "Foto",
-    "place": "Localitate",
-    "places": "Locuri",
-    "popular_news": "Știri populare",
-    "popular": "Popular",
-    "portal_md_app_name": "Click.md",
-    "portal_md_short_app_name": "Click",
-    "portal_ro_app_name": "Ournet.ro",
-    "portal_ro_short_app_name": "Ournet",
-    "portal_site_description_format": "Toate știrile din %(country)s. Evenimente, declarații, tendințe.",
-    "portal_site_title_format": "Ultimele știri din %(country)s",
-    "position": "Poziție",
-    "preview": "Previzualizare",
-    "quotes_about_format": "%(name)s - Declarații",
-    "quotes_by_author_format": "Declarații de %(name)s",
-    "quotes": "Declarații",
-    "read_more_on_source_format": "Citește pe %(name)s",
-    "recent_search": "Ultimele căutări",
-    "related_news": "Știri asemănătoare",
-    "save": "Salvează",
-    "search_place_format": "Rezultatele căutării după: %(name)s",
-    "search_place_in_adm_cn_format": "Caută localitate în %(region)s, %(country)s",
-    "search_place_in_cn_format": "Caută localitate în %(country)s",
-    "search_place": "Caută localitate",
-    "search_result_format": "Rezultate: %(name)s",
-    "share_on_format": "Trimite pe %(name)s",
-    "share_with_your_friends": "Împarte cu prietenii tăi",
-    "show_header": "Cu titlu",
-    "subscribe_to_daily_notifications": "Abonează-te la notificări zilnice",
-    "subscribe": "Abonare",
-    "success": "Succes",
-    "temperature": "Temperatura",
-    "text_color": "Text color",
-    "today": "Astăzi",
-    "tomorrow": "Mâine",
-    "topic_events_title_format": "%(name)s - Evenimente",
-    "topic_latest_news_format": "%(name)s - Ultimele știri",
-    "topic_news_title_format": "Știri despre %(name)s",
-    "topic_quotes_title_format": "%(name)s - Declaratii",
-    "total_subscribers_format": "Total abonați: %d",
-    "trending": "Tendințe",
-    "useful": "Util",
-    "vertical": "Vertical",
-    "video_news": "Video știri",
-    "video": "Video",
-    "views": "vizualizări",
-    "weather_cright": "Prognoza meteo oferită de MET Norway",
-    "weather_for_10days": "Prognoza meteo pentru 10 zile",
-    "weather_home_title_format": "Vremea in %(name)s pentru 10 zile",
-    "weather_in_cn_summary_format": "Prognoza meteo in %(country)s pentru 10 zile in orice localitate",
-    "weather_in_format": "Vremea în %(name)s",
-    "weather_md_app_name": "Click Meteo",
-    "weather_md_short_app_name": "Meteo",
-    "weather_notifications_subscribe_for_place_format": "Abonează-te la alerte meteo pentru %(name)s",
-    "weather_on_your_site_info_format": "Pune vremea pe site-ul tău pentru orice localitate din %(country)s.",
-    "weather_on_your_site": "Vremea pe site-ul tău",
-    "weather_place_description_format": "Prognoza meteo in %(name1)s, vremea in %(name2)s - azi, maine, pentru 10 zile",
-    "weather_place_details_info_format": "Prognoza meteo in %(name1)s, vremea la %(name2)s, azi, maine, poimaine, 3 zile, 7 zile, 10 zile, urmatoarele zile. Starea vremii in %(name3)s.",
-    "weather_place_title_format_10days_format": "Vremea in %(name1)s, prognoza meteo in %(name2)s, 10 zile",
-    "weather_place_title_format": "Vremea in %(name1)s, prognoza meteo in %(name2)s",
-    "weather_ro_app_name": "Ournet Meteo",
-    "weather_ro_short_app_name": "Meteo",
-    "weather": "Vremea",
-    "weather2": "Meteo",
-    "weekly_horoscope_details_format": "Horoscop săptămânal: %(date)s.",
-    "weekly_horoscope_details": "Horoscop săptămânal. Horoscopul pentru săptămâna curentă.",
-    "weekly_horoscope_format": "Horoscop săptămânal: %(date)s",
-    "weekly_horoscope": "Horoscop săptămânal",
-    "weekly": "Săptămânal",
-    "width": "Lățime",
-    "wind": "Vânt"
+  "24_hrs": "24 ore",
+  "accept_notifications": "Primește notificări",
+  "ads": "Publicitate",
+  "back_color": "Culoare fundal",
+  "base_color": "Base color",
+  "border_color": "Culoare margini",
+  "configuration": "Configurare",
+  "contact": "Contact",
+  "count_news_format": [
+    [0, 0, "%d știri"],
+    [1, 1, "o știre"],
+    [2, null, "%d știri"]
+  ],
+  "count_places_format": [
+    [0, 0, "%d localități"],
+    [1, 1, "o localitate"],
+    [2, null, "+%d localități"]
+  ],
+  "count_views_format": [
+    [0, 0, "%d vizualizări"],
+    [1, 1, "o vizualizare"],
+    [2, null, "%d vizualizări"]
+  ],
+  "country_al": "Albania",
+  "country_bg": "Bulgaria",
+  "country_cz": "Cehia",
+  "country_hu": "Ungaria",
+  "country_in": "India",
+  "country_it": "Italia",
+  "country_lv": "Letonia",
+  "country_md": "Moldova",
+  "country_pl": "Polonia",
+  "country_ro": "România",
+  "country_ru": "Rusia",
+  "country_tr": "Turcia",
+  "country_kz": "Kazahstan",
+  "daily_horoscope_details_format": "Horoscopul pentru astăzi %(name)s.",
+  "daily_horoscope_details": "Horoscop zilnic. Horoscopul pentru astăzi și mâine.",
+  "daily_horoscope_format": "Horoscop: %(name)s",
+  "daily_horoscope": "Horoscopul zilei",
+  "weather_around_the_world": "Vremea în lume",
+  "daily": "Zilnic",
+  "date_format": "D MMMM",
+  "day_format": "dddd, D MMMM",
+  "days": "zile",
+  "detailed_horoscope": "Horoscop detaliat",
+  "error_404_info": "Pagina nu a fost găsită",
+  "error_500_info": "Eroare necunoscută",
+  "error_description": "A apărut o eroare. Căutăm vinovații...",
+  "error": "Eroare",
+  "events_from_country_format": "Evenimente din %(name)s",
+  "events": "Evenimente",
+  "exchange_rates": "Curs valutar",
+  "exchange": "Curs valutar",
+  "export_horoscope": "Preluare horoscop",
+  "forecast_no_data": "Vă rugăm să încercați peste câteva minute.",
+  "forecast_on_email_place_format": "Vremea în %(name)s pe email.",
+  "foto_video_from_event_format": "Foto și Video: %(name)s",
+  "generate": "Generează",
+  "head_back_color": "Titlu culoare fundal",
+  "head_text_color": "Titlu culoare text",
+  "health": "Sănătate",
+  "heigth": "Înălțime",
+  "home": "Acasă",
+  "horizontal": "Orizontal",
+  "horo_api_title": "Preluare horoscop",
+  "horo_notifications_subscribe_for_sign_format": "%(name)s: Primește notificări zilnice",
+  "horo_on_your_site_info": "Horoscopul zilnic gratuit pe site-ul tău",
+  "horo_on_your_site": "Horoscopul pe site-ul tău",
+  "horo_sign_daily_details_format": "%(sign)s. Horoscopul zilei: %(date)s",
+  "horo_sign_daily_title_format": "%(sign)s: Horoscopul zilei",
+  "horo_sign_date_format": "D MMM",
+  "horo_sign_weekly_details_format": "%(sign)s. Horoscopul săptămânii: %(date)s",
+  "horo_sign_weekly_title_format": "%(sign)s: Horoscop săptămânal",
+  "horoscope_md_app_name": "Click Horoscop",
+  "horoscope_md_short_app_name": "Horoscop",
+  "horoscope_ro_app_name": "Ournet Horoscop",
+  "horoscope_ro_short_app_name": "Horoscop",
+  "horoscope": "Horoscop",
+  "hour": "Ora",
+  "html_code": "Codul HTML",
+  "humidity": "Umiditate",
+  "icon_color": "Culoare imagine",
+  "images": "imagini",
+  "important_news_in_last_7days": "Știri importante în ultimele 7 zile",
+  "important_news": "Știri importante",
+  "important": "Important",
+  "in_country_md": "R. Moldova",
+  "in_country_ro": "România",
+  "info": "Info",
+  "international": "Internațional",
+  "invalid_email": "Invalid Email!",
+  "item_color": "Item color",
+  "item_conditions": "Condiţia atmosferică",
+  "item_pressure": "mmHg",
+  "item_temperatire": "Temperatura aerului, °C",
+  "item_wind_dir": "Directia vîntului",
+  "item_wind_speed_ms": "m/s",
+  "item_wind_speed": "Viteza vînt. m/s",
+  "latest_events_from_country_format": "Ultimele evenimente din %(name)s",
+  "latest_events": "Ultimele evenimente",
+  "latest_news": "Ultimele știri",
+  "latest_quotes_in_media_country_format": "Ultimele declarații/citate din presă - %(country)s",
+  "latest_quotes_in_media": "Ultimele declarații din presă",
+  "latest_quotes": "Ultimele declarații",
+  "line_color": "Culoare linii",
+  "load_more_places": "Mai multe localităţi",
+  "love": "Dragoste",
+  "lucky_numbers": "Numere norocoase",
+  "max": "max",
+  "min": "min",
+  "mm": "mm",
+  "more_events": "Mai multe evenimente",
+  "more_quotes": "Mai multe declarații",
+  "more": "Mai mult",
+  "most_important_news_in_last_7days_country_format": "Cele mai importante știri din presa din %(country)s pentru ultimele 7 zile",
+  "news_md_app_name": "Click Știri",
+  "news_md_short_app_name": "Știri",
+  "news_ro_app_name": "Ournet Știri",
+  "news_ro_short_app_name": "Știri",
+  "news_site_description_format": "Toate știrile din %(country)s. Evenimente, declarații, tendințe.",
+  "news_site_title_format": "Ultimele știri din %(country)s",
+  "news_sources": "Surse de știri",
+  "news_sources_in_country_format": "Surse de știri din %(country)s",
+  "add_news_source": "Adaugă o sursă",
+  "news_topic_description_format": "Ultimele știri și evenimente din presa despre %(name)s",
+  "news_topic_page_title_format": "%(name)s - Ultimele știri",
+  "news_topic_quotes_description_format": "%(name)s - Ultimele declarații din presa",
+  "news_topic_quotes_page_title_format": "%(name)s - Declarații",
+  "news": "Știri",
+  "no_days": "Nr. zile",
+  "no_thanks": "Nu mulțumesc",
+  "not_found_places": "Nu am găsit nici o localitate.",
+  "opinia": "Opinia",
+  "photo": "Foto",
+  "place": "Localitate",
+  "places": "Locuri",
+  "popular_news": "Știri populare",
+  "popular": "Popular",
+  "portal_md_app_name": "Click.md",
+  "portal_md_short_app_name": "Click",
+  "portal_ro_app_name": "Ournet.ro",
+  "portal_ro_short_app_name": "Ournet",
+  "portal_site_description_format": "Toate știrile din %(country)s. Evenimente, declarații, tendințe.",
+  "portal_site_title_format": "Ultimele știri din %(country)s",
+  "position": "Poziție",
+  "preview": "Previzualizare",
+  "quotes_about_format": "%(name)s - Declarații",
+  "quotes_by_author_format": "Declarații de %(name)s",
+  "quotes": "Declarații",
+  "read_more_on_source_format": "Citește pe %(name)s",
+  "recent_search": "Ultimele căutări",
+  "related_news": "Știri asemănătoare",
+  "save": "Salvează",
+  "search_place_format": "Rezultatele căutării după: %(name)s",
+  "search_place_in_adm_cn_format": "Caută localitate în %(region)s, %(country)s",
+  "search_place_in_cn_format": "Caută localitate în %(country)s",
+  "search_place": "Caută localitate",
+  "search_result_format": "Rezultate: %(name)s",
+  "share_on_format": "Trimite pe %(name)s",
+  "share_with_your_friends": "Împarte cu prietenii tăi",
+  "show_header": "Cu titlu",
+  "subscribe_to_daily_notifications": "Abonează-te la notificări zilnice",
+  "subscribe": "Abonare",
+  "success": "Succes",
+  "temperature": "Temperatura",
+  "text_color": "Text color",
+  "today": "Astăzi",
+  "tomorrow": "Mâine",
+  "topic_events_title_format": "%(name)s - Evenimente",
+  "topic_latest_news_format": "%(name)s - Ultimele știri",
+  "topic_news_title_format": "Știri despre %(name)s",
+  "topic_quotes_title_format": "%(name)s - Declaratii",
+  "total_subscribers_format": "Total abonați: %d",
+  "trending": "Tendințe",
+  "useful": "Util",
+  "vertical": "Vertical",
+  "video_news": "Video știri",
+  "video": "Video",
+  "views": "vizualizări",
+  "weather_cright": "Prognoza meteo oferită de MET Norway",
+  "weather_for_10days": "Prognoza meteo pentru 10 zile",
+  "weather_home_title_format": "Vremea in %(name)s pentru 10 zile",
+  "weather_in_cn_summary_format": "Prognoza meteo in %(country)s pentru 10 zile in orice localitate",
+  "weather_in_format": "Vremea în %(name)s",
+  "weather_md_app_name": "Click Meteo",
+  "weather_md_short_app_name": "Meteo",
+  "weather_notifications_subscribe_for_place_format": "Abonează-te la alerte meteo pentru %(name)s",
+  "weather_on_your_site_info_format": "Pune vremea pe site-ul tău pentru orice localitate din %(country)s.",
+  "weather_on_your_site": "Vremea pe site-ul tău",
+  "weather_place_description_format": "Prognoza meteo in %(name1)s, vremea in %(name2)s - azi, maine, pentru 10 zile",
+  "weather_place_details_info_format": "Prognoza meteo in %(name1)s, vremea la %(name2)s, azi, maine, poimaine, 3 zile, 7 zile, 10 zile, urmatoarele zile. Starea vremii in %(name3)s.",
+  "weather_place_title_format_10days_format": "Vremea in %(name1)s, prognoza meteo in %(name2)s, 10 zile",
+  "weather_place_title_format": "Vremea in %(name1)s, prognoza meteo in %(name2)s",
+  "weather_ro_app_name": "Ournet Meteo",
+  "weather_ro_short_app_name": "Meteo",
+  "weather": "Vremea",
+  "weather2": "Meteo",
+  "weekly_horoscope_details_format": "Horoscop săptămânal: %(date)s.",
+  "weekly_horoscope_details": "Horoscop săptămânal. Horoscopul pentru săptămâna curentă.",
+  "weekly_horoscope_format": "Horoscop săptămânal: %(date)s",
+  "weekly_horoscope": "Horoscop săptămânal",
+  "weekly": "Săptămânal",
+  "width": "Lățime",
+  "wind": "Vânt"
 }
