--- a/locales/en.json
+++ b/locales/en.json
@@ -174,6 +174,7 @@
   "views": "views",
   "weather_around_the_world": "Weather around the world",
   "weather_in_app_name": "India Weather",
+  "weather_es_app_name": "Spain Weather",
   "weather_in_short_app_name": "Weather",
   "weather_hr_app_name": "Vietnam Weather",
   "weather_hr_short_app_name": "Weather",
