--- a/locales/es.json
+++ b/locales/es.json
@@ -114,8 +114,8 @@
   "more_quotes": "Más declaraciones",
   "more": "Más",
   "most_important_news_in_last_7days_country_format": "Las noticias más importantes en %(country)s de los últimos 7 días",
-  "news_in_app_name": "Ournet Noticias",
-  "news_in_short_app_name": "Noticias",
+  "news_es_app_name": "Ournet Noticias",
+  "news_es_short_app_name": "Noticias",
   "news_site_description_format": "Todas las noticias de %(country)s. Eventos, declaraciones, tendencias.",
   "news_site_title_format": "Noticias de %(country)s",
   "news_sources": "Fuentes de noticias",
