--- a/locales/es.json
+++ b/locales/es.json
@@ -135,8 +135,8 @@
   "places": "Lugares",
   "popular_news": "Noticias populares",
   "popular": "Popular",
-  "portal_in_app_name": "Ournet.in",
-  "portal_in_short_app_name": "Ournet",
+  "portal_es_app_name": "Ournet.es",
+  "portal_es_short_app_name": "Ournet",
   "portal_site_description_format": "Todas las noticias de %(country)s. Eventos, declaraciones, tendencias.",
   "portal_site_title_format": "Últimas noticias de %(country)s",
   "position": "Posición",
