--- a/locales/en.json
+++ b/locales/en.json
@@ -1,6 +1,8 @@
 {
   "24_hrs": "24 hrs",
   "accept_notifications": "Accept notifications",
+  "add_article": "Add article",
+  "advertising": "Advertising",
   "ads": "Ads",
   "back_color": "Back color",
   "base_color": "Base color",
