--- a/locales/ro.json
+++ b/locales/ro.json
@@ -1,6 +1,8 @@
 {
   "24_hrs": "24 ore",
   "accept_notifications": "Primește notificări",
+  "add_article": "Adaugă articol",
+  "advertising": "Publicitate",
   "ads": "Publicitate",
   "back_color": "Culoare fundal",
   "base_color": "Base color",
