/ads & /business pages

--- a/locales/bg.json
+++ b/locales/bg.json
@@ -5,6 +5,7 @@
   "back_color": "Цвят на фона",
   "base_color": "Основен цвят",
   "border_color": "Цвят на границите",
+  "business": "Business",
   "configuration": "Конфигурация",
   "contact": "Контакт",
   "count_news_format": [
