--- a/locales/cs.json
+++ b/locales/cs.json
@@ -5,6 +5,7 @@
   "back_color": "Zadní barva",
   "base_color": "Základní barva",
   "border_color": "Barva ohraničení",
+  "business": "Business",
   "configuration": "Konfigurace",
   "contact": "Kontakt",
   "count_news_format": [
