--- a/locales/en.json
+++ b/locales/en.json
@@ -7,6 +7,7 @@
   "back_color": "Back color",
   "base_color": "Base color",
   "border_color": "Border color",
+  "business": "Business",
   "configuration": "Configuration",
   "contact": "Contact",
   "count_news_format": [
