--- a/locales/sr.json
+++ b/locales/sr.json
@@ -4,6 +4,7 @@
   "ads": "Publicitate",
   "back_color": "Boja pozadine",
   "base_color": "Baza boja",
+  "business": "Business",
   "border_color": "Boja ivice",
   "configuration": "Konfiguracija",
   "contact": "Kontakt",
