--- a/locales/hr.json
+++ b/locales/hr.json
@@ -5,6 +5,7 @@
   "back_color": "Back color",
   "base_color": "Base color",
   "border_color": "Border color",
+  "business": "Business",
   "configuration": "Konfiguracija",
   "contact": "Kontakt",
   "count_news_format": [
