--- a/locales/ro.json
+++ b/locales/ro.json
@@ -7,6 +7,7 @@
   "back_color": "Culoare fundal",
   "base_color": "Base color",
   "border_color": "Culoare margini",
+  "business": "Business",
   "configuration": "Configurare",
   "contact": "Contact",
   "count_news_format": [
