--- a/locales/es.json
+++ b/locales/es.json
@@ -5,7 +5,7 @@
   "back_color": "Back color",
   "base_color": "Base color",
   "border_color": "Border color",
-  "business": "Business",
+  "business": "Negocio",
   "configuration": "Configuración",
   "contact": "Contacto",
   "count_news_format": [
