--- a/locales/hu.json
+++ b/locales/hu.json
@@ -5,7 +5,7 @@
   "back_color": "Vissza szín",
   "base_color": "Alapszín",
   "border_color": "Határszín",
-  "business": "Business",
+  "business": "Üzlet",
   "configuration": "Konfigurációja",
   "contact": "Kontakt",
   "count_news_format": [
