--- a/locales/it.json
+++ b/locales/it.json
@@ -5,7 +5,7 @@
   "back_color": "Colore di sfondo",
   "base_color": "Colore di base",
   "border_color": "Colore del bordo",
-  "business": "Business",
+  "business": "Affari",
   "configuration": "Configurazione",
   "contact": "Contatto",
   "count_news_format": [
