--- a/locales/ro.json
+++ b/locales/ro.json
@@ -7,7 +7,7 @@
   "back_color": "Culoare fundal",
   "base_color": "Base color",
   "border_color": "Culoare margini",
-  "business": "Business",
+  "business": "Afaceri",
   "configuration": "Configurare",
   "contact": "Contact",
   "count_news_format": [
