--- a/locales/ru.json
+++ b/locales/ru.json
@@ -5,7 +5,7 @@
   "back_color": "Цвет фона",
   "base_color": "базовый цвет",
   "border_color": "Цвет краев",
-  "business": "Business",
+  "business": "Бизнес",
   "configuration": "Конфигурация",
   "contact": "Контакт",
   "count_news_format": [
