--- a/locales/cs.json
+++ b/locales/cs.json
@@ -2,6 +2,7 @@
   "24_hrs": "24 hod",
   "accept_notifications": "Přijmout oznámení",
   "ads": "Reklama",
+  "advertising": "Reklama",
   "back_color": "Zadní barva",
   "base_color": "Základní barva",
   "border_color": "Barva ohraničení",
