--- a/locales/es.json
+++ b/locales/es.json
@@ -2,6 +2,7 @@
   "24_hrs": "24 horas",
   "accept_notifications": "Aceptar notificaciones",
   "ads": "Anuncios",
+  "advertising": "Publicidad",
   "back_color": "Back color",
   "base_color": "Base color",
   "border_color": "Border color",
