--- a/locales/hu.json
+++ b/locales/hu.json
@@ -2,6 +2,7 @@
   "24_hrs": "24 óra",
   "accept_notifications": "Fogadja értesítések",
   "ads": "Reklám",
+  "advertising": "Hirdetés",
   "back_color": "Vissza szín",
   "base_color": "Alapszín",
   "border_color": "Határszín",
