--- a/locales/it.json
+++ b/locales/it.json
@@ -2,6 +2,7 @@
   "24_hrs": "24 ore",
   "accept_notifications": "Ricevere notifiche",
   "ads": "Pubblicità",
+  "advertising": "Pubblicità",
   "back_color": "Colore di sfondo",
   "base_color": "Colore di base",
   "border_color": "Colore del bordo",
