--- a/locales/ru.json
+++ b/locales/ru.json
@@ -2,6 +2,7 @@
   "24_hrs": "24 часа",
   "accept_notifications": "Получать уведомления",
   "ads": "Реклама",
+  "advertising": "Реклама",
   "back_color": "Цвет фона",
   "base_color": "базовый цвет",
   "border_color": "Цвет краев",
