--- a/locales/bg.json
+++ b/locales/bg.json
@@ -2,6 +2,7 @@
   "24_hrs": "24 часа",
   "accept_notifications": "Приемане на известия",
   "ads": "Реклама",
+  "advertising": "Реклама",
   "back_color": "Цвят на фона",
   "base_color": "Основен цвят",
   "border_color": "Цвят на границите",
