--- a/locales/bg.json
+++ b/locales/bg.json
@@ -3,6 +3,7 @@
   "accept_notifications": "Приемане на известия",
   "ads": "Реклама",
   "advertising": "Реклама",
+  "publish_advertorials": "Публикуване на рекламни статии",
   "back_color": "Цвят на фона",
   "base_color": "Основен цвят",
   "border_color": "Цвят на границите",
