--- a/locales/cs.json
+++ b/locales/cs.json
@@ -3,6 +3,7 @@
   "accept_notifications": "Přijmout oznámení",
   "ads": "Reklama",
   "advertising": "Reklama",
+  "publish_advertorials": "Publikovat reklamní články",
   "back_color": "Zadní barva",
   "base_color": "Základní barva",
   "border_color": "Barva ohraničení",
