--- a/locales/es.json
+++ b/locales/es.json
@@ -3,6 +3,7 @@
   "accept_notifications": "Aceptar notificaciones",
   "ads": "Anuncios",
   "advertising": "Publicidad",
+  "publish_advertorials": "Publicar advertorials",
   "back_color": "Back color",
   "base_color": "Base color",
   "border_color": "Border color",
