--- a/locales/hu.json
+++ b/locales/hu.json
@@ -3,6 +3,7 @@
   "accept_notifications": "Fogadja értesítések",
   "ads": "Reklám",
   "advertising": "Hirdetés",
+  "publish_advertorials": "Hirdetési cikkek",
   "back_color": "Vissza szín",
   "base_color": "Alapszín",
   "border_color": "Határszín",
