--- a/locales/it.json
+++ b/locales/it.json
@@ -3,6 +3,7 @@
   "accept_notifications": "Ricevere notifiche",
   "ads": "Pubblicità",
   "advertising": "Pubblicità",
+  "publish_advertorials": "Pubblicare articoli pubblicitari",
   "back_color": "Colore di sfondo",
   "base_color": "Colore di base",
   "border_color": "Colore del bordo",
