--- a/locales/lv.json
+++ b/locales/lv.json
@@ -2,6 +2,7 @@
   "24_hrs": "24 stundas",
   "accept_notifications": "Pieņemt paziņojumus",
   "ads": "Reklāmas",
+  "publish_advertorials": "Publicēt reklāmas",
   "back_color": "Fona krāsa",
   "base_color": "Bāzes krāsa",
   "border_color": "Robežas krāsa",
