--- a/locales/ro.json
+++ b/locales/ro.json
@@ -4,6 +4,7 @@
   "add_article": "Adaugă articol",
   "advertising": "Publicitate",
   "ads": "Publicitate",
+  "publish_advertorials": "Adaugă articol publicitar",
   "back_color": "Culoare fundal",
   "base_color": "Base color",
   "border_color": "Culoare margini",
