--- a/locales/ru.json
+++ b/locales/ru.json
@@ -3,6 +3,7 @@
   "accept_notifications": "Получать уведомления",
   "ads": "Реклама",
   "advertising": "Реклама",
+  "publish_advertorials": "Публиковать рекламные статьи",
   "back_color": "Цвет фона",
   "base_color": "базовый цвет",
   "border_color": "Цвет краев",
