--- a/locales/en.json
+++ b/locales/en.json
@@ -3,6 +3,7 @@
   "accept_notifications": "Accept notifications",
   "add_article": "Add article",
   "advertising": "Advertising",
+  "publish_advertorials": "Publish advertorials",
   "ads": "Ads",
   "back_color": "Back color",
   "base_color": "Base color",
